# RAG-documentation-agent

./: .gitignore  README.md  main.py  pyproject.toml
playground/: 01-02_convert_pdf_to_markdown.ipynb  02-01-chunking.ipynb  pg_01_01_get_enriched_md_files.ipynb  pg_02_01_chunking.ipynb  pg_03_01_index.ipynb  pg_04_01_agents_tools.ipynb  pg_05_01_evaluation.ipynb
playground/.ipynb_checkpoints/: pg_01_01_get_enriched_md_files-checkpoint.ipynb  pg_02_01_chunking-checkpoint.ipynb  pg_03_01_index-checkpoint.ipynb
src/: agent.py  chunk.py  download.py  embedding.py  search.py
src/FE/: __init__.py  components.py
