[project]
name = "rag-documentation-agent"
version = "0.1.0"
description = "An agent for answering questions about any GitHub repository."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
