[project]
name = "rag-documentation-agent"
version = "0.1.0"
description = "An agent for answering questions about any GitHub repository."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.10",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "import-ipynb>=0.2",
    "jupyter>=1.1.1",
    "tqdm>=4.67.3",
]
